--- a/app/assets/stylesheets/table_styles.css
+++ b/app/assets/stylesheets/table_styles.css
@@ -1,52 +1,5 @@
-
-  
-.forecast {
-  text-shadow: #f44336;
-  margin: 0;
-  padding: .3rem;
-  background-color: #eee;
-  font: 1rem 'Fira Sans', sans-serif;
-  text-align: center;
-  font-style: italic;
-  
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+  border-style: inset;
 }
-
-.forecast > h1,
-.day-forecast {
-  margin: .5rem;
-  padding: .3rem;
-  font-size: 1.2rem;
-}
-
-.day-forecast {
-  background: right/contain content-box border-box no-repeat
-      url('/media/examples/rain.svg') white;
-}
-
-.day-forecast > h2,
-.day-forecast > p {
-  margin: .2rem;
-  font-size: 1rem;
-}
-.button {
-  background-color: #f44336; 
-  color: white;
-  padding: 1.5px 3.2px;
-  text-align: center;
-  display: inline;
-  font-size: 9.5px;
-  width: 85px;
-}
-#page{
-  text-align :center;
-}
-
-.sir{
-  width:100%;
-  text-align: center;
-}
-
-tbody tr{
-  width: 100%;
-}
-
