--- a/app/views/admin/edit.html.erb
+++ b/app/views/admin/edit.html.erb
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Details</title>
-  <style>
-    .bst{
-      width:500px;
-    }
-    
-  </style>
-   <script type="text/javascript" src="javascripts/remote_validation.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
+
 <div id="page-content">
   <h1 class="text-center mt-4">Edit User</h1>
 </div>
@@ -26,9 +10,10 @@
 <div class="row justify-content-center">
 
   <div class="col-5 shadow p-3 mb-6 bg-light rounded">
+  <div class="mb-2">
    
 
-      <%= form_with(model: @user,url: "/admin_update",method: :post,local: true) do |form|%>
+    <%= form_with(model: @user,url: "/admin_update/#{@user.id}",method: :post,local: true) do |form|%>
       <div id="error_messages"></div>
       <%if @user.errors.any?%>
       <div class="alert alert-danger">
@@ -76,37 +61,23 @@
       </div>
         
 
- <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <div class="form-group ">
+        <%= form.label :cover_picture,{ class: "col-3 col-form-label"}%>
+        <div class="col-10">
+          <%= form.file_field :cover_picture%>
+        </div>
+      </div>
+      <div class="form-group ">
+        <div class="text-align:center">
+          <%= form.submit "Update", :class => "justify-content-center btn btn-outline-success btn-lg bst" %>
+        </div>
+      </div>
+
+
     <% end %>
-
-
-    <div class="form-group">
-    <div class= "col-12 col-form-label">
-      <%= form.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     </div>
-      <div class="col-10">
-        <%= form.password_field :current_password, autocomplete: "current-password",class: "form-control shadow rounded" %>
-      </div>
-    </div>
-    <div class="form-group ">
-      <%= form.label :cover_picture,{ class: "col-3 col-form-label"}%>
-      <div class="col-10">
-        <%= form.file_field :cover_picture%>
-      </div>
-    </div>
-    <div class="text-align:center">
-      <%= form.submit "Update", :class => "justify-content-center btn btn-outline-success btn-lg bst" %>
-    </div>
-
-  <% end %>
     <div style="text-align:center">
         <h3><%= link_to "Back", :back %></h3>
     </div>
-    
+  </div>  
 </div>   
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html>
