--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,73 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Articles</title>
-    <style>
-        table, th, td {
-            border: 1px solid white;
-            border-collapse: collapse;
-            border-style: inset;
-        }
-        .bt{
-            color:white;
-        }
-    </style>
-</head>
-<body>
+
 <br><br>
-    <div class="container" style="text-align:center">
-     
+<div class="container" style="text-align:center">
     <h1>List of all articles</h1>
-    </div>
-     <div style="text-align:right;padding-right:10px;"><h3>
+</div>
+<div style="text-align:right;padding-left:10px;padding-right:10px;"><h3>
   <%= link_to "Create a new Article",new_article_path, { class: 'btn btn-warning btn-lg secondary'}%></h3>
 </div>
-    <br>
-    <table id="data_table" class="table table-responsive w-100 d-block d-md-table">
-        <thead>
-            <tr>
-                <th style="width:10%"scope="col" class="table-primary"><h3>
-                    Date
-                </th>
-                <th scope="col" class="table-primary"><h3>
-                    Title
-                </h3></th>
-                <th scope="col" class="table-primary"><h3>
-                    Description
-                </h3> </th>
-            </tr>
-        </thead>
-        <tbody>
-            <%@t=0%>
-            <% @articles.each do |art|%>
-                <tr class="table-<%= @t%2==0?"success": "info"%>">
-                    <%@t=@t+1%>
-                    <td><h4>
-                        <%= Date.parse(art.created_at.to_s)%> </h4></td>
-                    <td ><h3>
+<br>
+<table id="data_table" style="padding-left:10px;padding-right:10px;" class="table table-responsive w-100 d-block d-md-table">
+    <thead>
+        <th style="width:10%"scope="col" class="table-primary">
+            <h3>
+                Date
+            </h3>
+        </th>
+        <th scope="col" class="table-primary">
+            <h3>
+                Title
+            </h3>
+        </th>
+        <th scope="col" class="table-primary">
+            <h3>
+                Description
+            </h3> 
+        </th>
+    </thead>
+    <tbody>
+        <%@t=0%>
+        <% @articles.each do |art|%>
+            <tr class="table-<%= @t%2==0 ? "success": "info"%>">
+                <%@t=@t+1%>
+                <td>
+                    <h4>
+                        <%= Date.parse(art.created_at.to_s)%> 
+                    </h4>
+                </td>
+                <td>
+                    <h4>
                         <%= link_to art.title, article_path(art)%>
-                    </h3></td>
-                    <td><h3>
-                        <%= art.description%>
-                    </h3></td>
-                    
-                </tr>
-            <%end%>
-        </tbody>
-    </table>
+                    </h4>
+                </td>
+                <td>
+                    <h4>
+                        <%= simple_format(art.description)%>
+                    </h4>
+                </td>
+            </tr>
+        <%end%>
+    </tbody>
+</table>
 
 <script>
-//    $(document).ready(function(){
-//     var oTable=$("#data_table").DataTable({})
-//   });
- 
+ $(document).ready( function () {
+   $('#data_table').DataTable();
+});
 
 
 </script>
-</body>
-</html>
 
