--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,8 @@
 <br> <br>
 
-
-<h1 style="padding-left:12px">
-    Create a new Article
-</h1>
+<div class="page-content">
+    <h1 class="text-center mt-4">
+        Create a new Article
+    </h1>
+</div>
 <%= render 'form', article: @articles%> 
