--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
-  <style>
-    .bst{
-      width:490px;
-    }
-  </style>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
-<div id="page-content">
-  <h1 class="text-center mt-4">Sign up</h1>
-</div>
+<div class="mt-4"></div>
 <div class="row justify-content-center">
   <div class="col-5 shadow p-3 mb-6 bg-light rounded">
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -23,78 +6,77 @@
 </div>
 <div class="row justify-content-center">
   <div class="col-5 shadow p-3 mb-6 bg-light rounded">
+
+    <div id="page-content">
+      <h1 class="text-center">Sign up</h1>
+    </div>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),data: { turbo: false }) do |f| %>
       
-          <div class="form-group ">
-            <%= f.label :name,{ class: "col-3 col-form-label"} %>
-            <div class="col-10">
-              <%= f.text_field :name, autofocus: true, autocomplete: "name",class: "form-control shadow rounded" %>
-            </div>
-          </div>
+      <div class="form-group ">
+        <%= f.label :name,{ class: "col-3 col-form-label"} %>
+        <div class="col-10">
+          <%= f.text_field :name, autofocus: true, autocomplete: "name",class: "form-control shadow rounded" %>
+        </div>
+      </div>
 
-          <div class="form-group ">
-            <%= f.label :email ,{ class: "col-3 col-form-label"}%>
-            <div class="col-10">
-              <%= f.text_field :email, autofocus: true, autocomplete: "email",class: "form-control shadow rounded" %>
-              </div>
+      <div class="form-group ">
+        <%= f.label :email ,{ class: "col-3 col-form-label"}%>
+        <div class="col-10">
+          <%= f.text_field :email, autofocus: true, autocomplete: "email",class: "form-control shadow rounded" %>
           </div>
+      </div>
 
-          <div class="form-group"  >
-              <%= f.label :Gender,{ class: "col-3 col-form-label"} %> 
-              <div style="transform:translate(50px);">
-                <%= f.radio_button :gender, "male",class: "form-check-input" %>Male &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-                <%= f.radio_button :gender, "female",class: "form-check-input" %>Female &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <%= f.radio_button :gender, "others",class: "form-check-input" %>Others &nbsp;
-              </div>
+      <div class="form-group"  >
+          <%= f.label :Gender,{ class: "fi col-3 col-form-label"} %> 
+          <div style="transform:translate(5%);">
+            <%= f.radio_button :gender, "male" %>&nbsp<%= f.label :Male  %>  &nbsp                                                                                                                                                                        
+            <%= f.radio_button :gender, "female"%>&nbsp<%= f.label :Female%>   &nbsp                                                                                                                                                                   
+            <%= f.radio_button :gender, "others" %>&nbsp<%= f.label :Others%> &nbsp
           </div>
+      </div>
 
-          <div class="form-group ">
-              <%= f.label :phone ,{ class: "col-3 col-form-label"}%>
-              <div class="col-10">
-                <%= f.text_field :phone,class: "form-control shadow rounded"%>
-              </div>
+      <div class="form-group ">
+          <%= f.label :phone ,{ class: "col-3 col-form-label"}%>
+          <div class="col-10">
+            <%= f.text_field :phone,class: "form-control shadow rounded"%>
           </div>
+      </div>
 
-          <div class="form-group ">
-            <div class="col-5 col-form-label">
-            <%= f.label :password%>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %></div>
-            <div class="col-10">
-              <%= f.password_field :password, autocomplete: "new-password",class: "form-control shadow rounded" %>
-            </div>
-          </div>
+      <div class="form-group ">
+        <div class="col-5 col-form-label">
+        <%= f.label :password%>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %></div>
+        <div class="col-10">
+          <%= f.password_field :password, autocomplete: "new-password",class: "form-control shadow rounded" %>
+        </div>
+      </div>
 
-          <div class="form-group ">
-            <%= f.label :password_confirmation ,{ class: "col-5 col-form-label"}%><br />
-            <div class="col-10">
-              <%= f.password_field :password_confirmation, autocomplete: "new-password",class: "form-control shadow rounded" %>
-            </div>
-          </div>
-          <div class="form-group ">
-            <%= f.label :Admin,{ class: "col-3 col-form-label"}%>
-            <%= f.check_box(:is_admin, options = {:checked => true}, checked_value =  :true, unchecked_value = :false) %>
-          </div>
-          <div class="form-group ">
-            <%= f.label :cover_picture ,{ class: "col-3 col-form-label"}%>
-            <div class="col-10">
-              <%= f.file_field :cover_picture,class: "form-control shadow rounded"%>
-            </div>
-          </div>
-          <div style="text-align:center">
-            <%= f.submit "Sign up", :class => "justify-content-center btn btn-outline-success btn-lg bst" %>
-          </div>
+      <div class="form-group ">
+        <%= f.label :password_confirmation ,{ class: "col-5 col-form-label"}%><br />
+        <div class="col-10">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password",class: "form-control shadow rounded" %>
+        </div>
+      </div>
+      <div class="form-group ">
+        <%= f.label :Admin,{ class: "col-3 col-form-label"}%>
+        <%= f.check_box(:is_admin, options = {:checked => true}, checked_value =  :true, unchecked_value = :false) %>
+      </div>
+      <div class="form-group ">
+        <%= f.label :cover_picture ,{ class: "col-3 col-form-label"}%>
+        <div class="col-10">
+          <%= f.file_field :cover_picture,class: "form-control shadow rounded"%>
+        </div>
+      </div><br>
+      <div style="text-align:center">
+        <%= f.submit "Sign up", :class => "justify-content-center btn btn-outline-success btn-lg bst" %>
+      </div>
         
     <% end %>
-    <div style="text-align:center">
+    <div style="text-align:center" class="mt-2">
       <h3><%= render "devise/shared/links" %></h3>
   </div>
 </div>
-    
-   
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html>
+  
+  
