--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= @user.name%></title>
-  <link rel="stylesheet" href="form_css.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            border-style: inset;
-        }
-    </style>
-</head>
-<body>
 <br> <br>
-
 <br>
-<div style="padding-left:10px;padding-right:10px">
+<div style="padding-left:10px;padding-right:10px" class="outer-container-1">
   <h1>
     <strong>
       <div style="text-align:center">
@@ -29,66 +8,93 @@
         <br>
       </div>
     </strong>
-    </h1>
-    <div style="text-align:center;">
-        <%if @user.cover_picture.attached? %>
-            <%= image_tag @user
-            .cover_picture, style:"width: 200px;height: 200px; display: block ;text-align:center;margin-left:auto;margin-right:auto;"%>
-        <%end%>
-        <%if user_signed_in?%>
-          <%if current_user.is_admin?%>
-            <p  style="font-size:12px">
-              <%= link_to "/admin_edit/#{@user.id}" do%>
-                <%= fa_icon "edit",class: "btn btn-outline-info" %>
-              <% end %>
-              <%= link_to '<i class="fa fa-trash-o fa-2x"></i>'.html_safe, user_path(@user), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure you want to delete the User?"} %>
-            </p>
-          <%elsif can? :update,@user%>
-            <%= link_to edit_user_registration_path(@user) do%>
-              <%= fa_icon "edit",class: "btn btn-outline-info" %>
-              <% end %>
-              <%= link_to '<i class="fa fa-trash-o fa-2x"></i>'.html_safe, user_path(@user), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure you want to delete the User?"} %>
-          <%end%>
-        <%end%>
-  </div>
-
-  <br><br>
-        <%@t=0%>
-        <%if @articles.length>0%>
-            <table class="table table-responsive w-100 d-block d-md-table">
-            <th scope="col" class="table-primary">
-                <h3>Title</h3>
-            </th>
-            <th scope="col" class="table-primary">
-                <h3>Description</h3>
-            </th>
-            <% @articles.each do |art|%>
-              <tr class="table-<%= @t%2==0?"default": "active"%>">
-                <%@t=@t+1%>
-                <td><h3>
-                <%= link_to art.title,article_path(art)%>
-                </h3></td>
-                <td><h3>
-                <%= art.description%> 
-                </h3></td>
-            </tr>
-            <%end%>
-            </table>
-        <%else%>
-            <h5 style="text-align:center">No post available........</h5>
-        <%end%>
-  <br>
-  <div class="w3-center w3-padding-32">
-        <div class="w3-bar">
-            <%= will_paginate @articles, :container => false, :class=>"w3-button w3-hover-black" %>
-        </div>
-  </div>
-   <h4 ><%= link_to "Back to Home",root_path %></h4>
+  </h1>
+</div>
+<div style="text-align:center;"class="mb-3">
+  <%if @user.cover_picture.attached? %>
+    <%= image_tag @user
+    .cover_picture, style:"width: 200px;height: 200px; display: block ;text-align:center;margin-left:auto;margin-right:auto;"%>
+  <%end%>
 </div>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  </body>
-</html>
+<div style="text-align:center;">
+  <%if user_signed_in?%>
+    <%if current_user.is_admin?%>
+      <%= link_to "/admin_edit/#{@user.id}" do%>
+        <%= fa_icon "edit",class: "btn-lg btn btn-outline-info" %>
+      <% end %>
+      <%= link_to user_path(@user), method: :delete, data: {confirm: "Are you sure you want to delete the User?"},:remote => true do%>
+        <%= fa_icon "trash",class: "btn-lg btn btn-outline-danger"%>
+      <%end%>
+    <%elsif can? :update,@user%>
+      <%= link_to edit_user_registration_path(@user) do%>
+        <%= fa_icon "edit",class: "btn-lg btn btn-outline-info" %>
+      <% end %>
+      <%= link_to user_path(@user), method: :delete, data: {confirm: "Are you sure you want to delete the User?"},:remote => true do%>
+        <%= fa_icon "trash",class: "btn-lg btn btn-outline-danger"%>
+      <%end%>
+
+    <%end%>
+  <%end%>
+</div>
+
+
+
+<%@t=0%>
+
+<%if @articles.length>0%>
+<br><br>
+  <div class="mb-3" style="padding-left:10px;padding-right:10px">
+    <table class="table table-responsive w-100 d-block d-md-table">
+      <th scope="col" class="table-primary">
+        <h3>Title</h3>
+      </th>
+      <th scope="col" class="table-primary">
+        <h3>Description</h3>
+      </th>
+      <% @articles.each do |art|%>
+        <tr class="table-<%= @t%2==0?"default": "active"%>">
+          <%@t=@t+1%>
+          <td>
+            <h3>
+              <%= link_to art.title,article_path(art)%>
+            </h3>
+          </td>
+          <td>
+            <h3>
+              <%= art.description%> 
+            </h3>
+          </td>
+        </tr>
+      <%end%>
+    </table>
+  </div>
+  <div>
+    <h4>
+      <%= link_to "Back to Home",root_path %>
+    </h4>
+  </div>
+  
+
+<%else%>
+  <div >
+  <br><br>
+    <h5 style="text-align:center">No post available........</h5>
+  </div>
+  <footer>
+    <h4>
+      <%= link_to "Back to Home",root_path %>
+    </h4>
+  </footer>
+<%end%>
+
+
+<div class="w3-center w3-padding-32">
+  <div class="w3-bar">
+      <%= will_paginate @articles, :container => false, :class=>"w3-button w3-hover-black" %>
+  </div>
+</div>
+
+
+
